# Enterprise-RAG

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-PROGRAMS
.github/: issue_template.md  license_template.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/unit-tests/: action.yml
.github/linters/: .hadolint.yaml  .yaml-lint.yml
.github/workflows/: linter.yml  unit-tests.yml
deployment/: README.md  README_bash.md  ansible.cfg  configure.sh  credentials_utils.sh  images.yaml  install_chatqna.sh  one_click_chatqna.sh  requirements.txt  requirements.yaml  set_values.sh  test_connection.sh  test_dataprep.sh  update_images.sh
deployment/auth/: get_secret.sh  keycloak_configurator.sh
deployment/auth/apisix/: Chart.yaml  values.yaml
deployment/auth/apisix-routes/: values.yaml
deployment/auth/configs/: openssl.cnf
deployment/auth/ingress/: ingress-values.yaml
deployment/client_test/: client-test.yaml
deployment/configs/: config.json.tpl
deployment/fingerprint/: Chart.yaml  values.yaml
deployment/microservices-connector/: .clean_values_yaml.sh  .gitattributes  .golangci.yml  Dockerfile.manager  Dockerfile.router  Makefile  README.md  go.mod  go.sum  update_env_links.sh  usage_guide.md
deployment/playbooks/: application.yaml  backup.yaml  infrastructure.yaml  setup.yaml  validate.yaml
deployment/scripts/: check_prerequisites.sh  check_prerequisites_remote.sh  keycloak_configurator.sh  test_dataprep.sh  test_translation.sh
deployment/terraform/: .gitignore
docs/: README_dev.md  UI_features.md  configure_pipeline.md  docker_images_list.md  evaluation_of_backup.md  istio.md  multifactor_authentiacation.md  multifactor_authentication.md  performance_tuning_tips.md  prerequisites.md  tdx.md  telemetry.md
src/: tox.ini
src/comps/: __init__.py  version.py
src/comps/chat_history/impl/microservice/: .env  Dockerfile  pyproject.toml
src/comps/dataprep/: README.md  (+1 more)
src/comps/dataprep/impl/microservice/: .env  Dockerfile  pyproject.toml  requirements.txt
src/comps/dataprep/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/embeddings/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  requirements.txt
src/comps/embeddings/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/embeddings/impl/microservice/requirements/: langchain.txt  llama_index.txt
src/comps/embeddings/impl/model-server/mosec/docker/: .env  Dockerfile  Dockerfile.release  docker-compose.yaml  pyproject.toml  server-ipex.py
src/comps/embeddings/impl/model-server/mosec/docker/.dockerhub/: overview.md  short-description.txt
src/comps/embeddings/impl/model-server/ovms/docker/: .env  Dockerfile  Dockerfile.release  compliance-conf.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/comps/embeddings/impl/model-server/ovms/docker/.dockerhub/: overview.md  short-description.txt
src/comps/embeddings/impl/model-server/torchserve/docker/: .env  Dockerfile  Dockerfile.release  compliance-conf.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/comps/embeddings/impl/model-server/torchserve/docker/.dockerhub/: overview.md  short-description.txt
src/comps/guardrails/llm_guard_input_guardrail/impl/microservice/: .env  Dockerfile  Dockerfile.release  compliance-conf.yml  pyproject.toml  requirements.txt
src/comps/guardrails/llm_guard_input_guardrail/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/hierarchical_dataprep/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/hierarchical_dataprep/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/language_detection/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  requirements.txt
src/comps/language_detection/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/llms/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  requirements.txt
src/comps/llms/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/prompt_template/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  requirements.txt
src/comps/prompt_template/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/reranks/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  requirements.txt
src/comps/reranks/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/reranks/impl/model_server/torchserve/docker/: .env  Dockerfile  Dockerfile.release  compliance-conf.yml  config.properties  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/comps/reranks/impl/model_server/torchserve/docker/.dockerhub/: overview.md  short-description.txt
src/comps/retrievers/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml  redis-constants-override.py  requirements.txt
src/comps/retrievers/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/text_compression/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/text_compression/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/text_splitter/impl/microservice/: .env  Dockerfile  Dockerfile.release  pyproject.toml
src/comps/text_splitter/impl/microservice/.dockerhub/: overview.md  short-description.txt
src/comps/vectorstores/impl/requirements/: pyproject.toml
src/edp/: Dockerfile  Dockerfile.release  README.md  compliance-conf.yml  entrypoint.sh
src/edp/app/: .env  database.py  init_db.py  main.py  models.py  pyproject.toml  rbac.py  requirements.txt  sqs.py  tasks.py  utils.py
src/tests/: README.md  pytest.ini  test_workflow_chatqna.py
src/ui/: .dockerignore  .editorconfig  .env  .env.development  .gitignore  .prettierrc.json  Dockerfile  Dockerfile.release  README.md  compliance-conf.yaml  eslint.config.js  index.html  index.scss  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+1630 files in other folders)
