# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Chat_History_Microservice"
version = "1.4.0"
requires-python = ">=3.10"

dependencies = [
    "beanie==1.26.0",
    "motor==3.4.0",
    "aiohttp==3.10.11",
    "docarray==0.40.0",
    "fastapi==0.115.12",
    "httpx==0.27.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-semantic-conventions==0.46b0",
    "Pillow==10.3.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "pymongo==4.8.0",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "shortuuid==1.0.13",
    "uvicorn==0.30.1",
    "starlette==0.40.0",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "h11==0.16.0",
    "pyjwt==2.10.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.115.12",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]
