# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Dataprep_Microservice"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.111.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==1.26.4",
    "docarray[full]==0.40.0",
    "uvicorn==0.30.1",
    "beautifulsoup4==4.12.3",
    "docx2txt==0.8",
    "easyocr==1.7.1",
    "huggingface_hub==0.24.5",
    "langchain==0.3.6",
    "langchain-community==0.3.0",
    "langchain-text-splitters==0.3.0",
    "langsmith==0.1.125",
    "markdown==3.0.0",
    "pandas==2.2.2",
    "Pillow==10.4.0",
    "pymupdf==1.24.9",
    "pyspark==3.5.2",
    "python-bidi==0.4.2",
    "python-docx==1.1.2",
    "python-pptx==0.6.23",
    "sentence_transformers==3.0.1",
    "shortuuid==1.0.13",
    "unstructured[all-docs]==0.11.5",
    "cairosvg==2.7.1",
    "python-magic==0.4.27",
    "pathvalidate==3.2.2",
    "torch==2.6.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]
cu124 = [
  "torch==2.6.0",
  "torchvision==0.21.0",
]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.111.0",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
