# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Dataprep_Microservice"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.115.12",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "numpy==1.26.4",
    "docarray[full]==0.40.0",
    "uvicorn==0.30.1",
    "beautifulsoup4==4.12.3",
    "docx2txt==0.8",
    "easyocr==1.7.1",
    "huggingface_hub==0.26.0",
    "langchain==0.3.6",
    "langchain-community==0.3.0",
    "langchain-text-splitters==0.3.0",
    "langsmith==0.1.125",
    "markdown==3.0.0",
    "pandas==2.2.2",
    "Pillow==10.4.0",
    "pymupdf==1.24.9",
    "python-bidi==0.4.2",
    "python-docx==1.1.2",
    "python-pptx==1.0.1",
    "sentence_transformers==3.0.1",
    "shortuuid==1.0.13",
    "unstructured[all-docs]==0.17.2",
    "cairosvg==2.7.1",
    "python-magic==0.4.27",
    "pathvalidate==3.2.2",
    "langchain-experimental==0.3.4",
    "langchain-huggingface==0.1.2",
    "starlette==0.40.0",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "h11==0.16.0",
    "transformers==4.50.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.115.12",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "torchvision-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchvision-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
