# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Embedding_Microservice"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "docarray[full] == 0.40.0",
    "fastapi == 0.111.0",
    "opentelemetry-api == 1.25.0",
    "opentelemetry-exporter-otlp == 1.25.0",
    "opentelemetry-sdk == 1.25.0",
    "prometheus-fastapi-instrumentator == 7.0.0",
    "shortuuid == 1.0.13",
    "uvicorn == 0.30.1",
    "langchain==0.3.6",
    "langchain-huggingface==0.1.2",
    "langsmith==0.1.125",
    "huggingface_hub == 0.23.4",
    "llama-index-embeddings-text-embeddings-inference==0.1.4",
    "torch==2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.111.0",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
