# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Language_Detection_Microservice"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "aiohttp==3.10.11",
    "docarray[full]==0.40.0",
    "fastapi==0.115.12",
    "httpx==0.27.0",
    "langsmith==0.1.85",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "shortuuid==1.0.13",
    "uvicorn==0.30.1",
    "fasttext-langdetect==1.0.5",
    "numpy==1.26.4",
    "starlette==0.40.0",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "h11==0.16.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.115.12",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]
