# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Prompt_Template_Microservice"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "aiohttp==3.10.11",
    "docarray[full]==0.40.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "shortuuid==1.0.13",
    "uvicorn==0.30.1",
]
