# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-Prompt_Template_Microservice"
version = "1.4.0"
requires-python = ">=3.10"

dependencies = [
    "aiohttp==3.12.14",
    "docarray[full]==0.40.0",
    "fastapi==0.116.1",
    "httpx==0.27.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "shortuuid==1.0.13",
    "uvicorn==0.30.1",
    "starlette==0.47.2",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "pyyaml==6.0.2",
    "h11==0.16.0",
    "setuptools == 80.9.0",     # security update
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.116.1",
    "aiohttp==3.12.14",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]
