# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel_Enterprise_RAG-LLM_Guard_Input_Guardrail_Microservice"
version = "1.4.0"
requires-python = ">=3.10"

dependencies = [
    "pip==25.0.1",
    "nltk==3.9.1",
    "llm-guard==0.3.16",
    "pydantic==2.7.4",
    "pyyaml==6.0.1",
    "docarray[full]==0.40.0",
    "aiohttp==3.12.14",
    "fastapi==0.116.1",
    "httpx==0.27.0",
    "langsmith==0.1.85",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "prometheus-fastapi-instrumentator==7.0.0",
    "sentence_transformers==3.0.1",
    "shortuuid==1.0.13",
    "uvicorn==0.30.1",
    "optimum[onnxruntime]==1.25.2",
    "torch==2.7.1",
    "transformers==4.51.3",
    "starlette==0.47.2",
    "jinja2==3.1.6",
    "python-dotenv==1.1.0",
    "h11==0.16.0",
    "setuptools == 80.9.0",     # security update
    "protobuf == 4.25.8",
    "requests == 2.32.4",
    "urllib3 == 2.5.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "fastapi==0.116.1",
    "docarray[full]==0.40.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-sdk==1.25.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
