# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Embedding-Torchserve"
version = "1.0.1"
requires-python = ">=3.10"

dependencies = [
    "intel-openmp==2025.0.5",
    "mosec==0.9.2",
    "llmspec==0.3.18",
    "torch==2.7.0",
    "transformers==4.50.0",
    "intel-extension-for-pytorch==2.7.0",
    "hypothesis==6.82.0",
    "cmake>=3.13.0",
    "ninja==1.11.1",
    "wheel>=0.36",
    "setuptools>=50.0",
    "packaging==23.2",
    "psutil==5.9.5",
    "expecttest==0.3.0",
    "setuptools == 80.9.0",     # security update
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
