# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Embedding-OpenVINO"
version = "1.0.1"
requires-python = "==3.12.*"

dependencies = [
    "openvino_tokenizers==2025.0.0.0",
    "optimum-intel==1.22.0",
    "torch==2.7.1",
    "jinja2 == 3.1.6",
    "MarkupSafe==3.0.2",
    "setuptools == 80.9.0",     # security update
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
