# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[project]
name = "Intel-Enterprise-RAG-Embedding-OpenVINO"
version = "1.0.1"
requires-python = "==3.12.*"

dependencies = [
    "openvino_tokenizers==2025.0.0.0",
    "optimum-intel==1.24.0",
    "torch==2.7.1",
    "jinja2 == 3.1.6",
    "MarkupSafe==3.0.2",
    "setuptools == 80.9.0",     # security update
    "protobuf == 4.25.8",
    "requests == 2.32.4",
    "urllib3 == 2.5.0",
    "aiohttp == 3.12.14",
    "transformers == 4.52.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
